# ultrasphere

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  upgrader.yml
docs/: conf.py  index.md  installation.md  usage.md
paper/: paper.bib  paper.md
src/ultrasphere/: __init__.py  __main__.py  _coordinates.py  _creation.py  _draw.py  _integral.py  _random.py  check.py  cli.py  coordinates.py  creation.py  draw.py  eigenfunction.py  integral.py  polynomial.py  random.py  special.py  symmetry.py  wave_expansion.py
src/ultrasphere/harmonics/: assume.py  cut.py  eigenfunction.py  expansion.py  flatten.py  harmonics.py  helmholtz.py  index.py  translation.py
src/ultrasphere/special/: __init__.py  _bessel.py  _helmholtz.py  _lgamma.py  bessel.py  helmholtz.py
tests/: __init__.py  conftest.py  test_broadcastable.py  test_cli.py  test_coordinates_transform.py  test_cooridnates.py  test_creation.py  test_draw.py  test_dunder_main.py  test_eigenfunction.py  test_integral.py  test_main.py  test_polynomial.py  test_special.py  test_symmetry.py  test_wave_expansion.py
tests/harmonics/: test_index.py
